feat: add individual telephony through LiveKit SIP
